<resources>
    <string name="app_name">CollegeScheduler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">College Scheduler</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_courses">Courses</string>
    <string name="menu_assignments">Assignments</string>
    <string name="menu_exams">Exams</string>
    <string name="menu_todo">To-Do</string>
    <string name="create_assignment">New</string>
    <string name="create_course">New</string>
    <string name="create_exam">Add</string>
    <string name="create_todo">Add</string>
    <string name="day">Day</string>
    <string name="task">Task</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="due_date">Due date</string>
    <string name="todo">Todo</string>
    <string name="course">Course</string>
    <string name="time">Time</string>
    <string name="repeatDays">Days Repeated ex M,TU,W,T,F</string>
    <string name="professor">Professor</string>
    <string name="section">Section</string>
    <string name="location">Location</string>
    <string name="room_number">Room #</string>
    <string name="view_details">Details</string>
    <string name="edit_details">Edit</string>
    <string name="remove">Remove</string>
    <string name="assignment">Assignment</string>
    <string name="exam">Exam</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="name">Name</string>
    <string name="incomplete">Incomplete</string>
    <string name="complete">Complete</string>
    <string name="date">Date</string>
    <string name="reset">Reset</string>
    <string name="monday">M</string>
    <string name="wednesday">W</string>
    <string name="tuesday">T</string>
    <string name="friday">F</string>
    <string name="thursday">R</string>
    <string name="start">"Start: "</string>
    <string name="end">"End: "</string>
</resources>