<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/toolst"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/courseInputDialog"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/course"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dayInput" />

        <EditText
            android:id="@+id/time"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/time" />

        <EditText
            android:id="@+id/repeatedDays"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textCapCharacters"
            android:text="@string/repeatDays" />

        <EditText
            android:id="@+id/Professor"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textCapCharacters"
            android:text="@string/professor" />
        <EditText
            android:id="@+id/Section"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textCapCharacters"
            android:text="@string/section" />
        <EditText
            android:id="@+id/location"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:inputType="textCapCharacters"
            android:ems="10"
            android:text="@string/location" />
        <EditText
            android:id="@+id/room_number"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/room_number" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>