<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_courses">

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.example.collegescheduler.ui.courses.CoursesFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/nav_assignments"
        android:name="com.example.collegescheduler.ui.assignments.AssignmentsFragment"
        android:label="@string/menu_assignments"
        tools:layout="@layout/fragment_assignments" />

    <fragment
        android:id="@+id/nav_exams"
        android:name="com.example.collegescheduler.ui.exams.ExamsFragment"
        android:label="@string/menu_exams"
        tools:layout="@layout/fragment_exams" />

    <fragment
        android:id="@+id/nav_todo"
        android:name="com.example.collegescheduler.ui.todo.TodoFragment"
        android:label="@string/menu_todo"
        tools:layout="@layout/fragment_exams" />
</navigation>