<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/toolst"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/taskInputDialog"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/task"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dayInput" />

        <EditText
            android:id="@+id/dayInput"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="date"
            android:text="@string/day" />

        <EditText
            android:id="@+id/monthInput"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="date"
            android:text="@string/month" />

        <EditText
            android:id="@+id/yearInput"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="date"
            android:text="@string/year" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>