<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/toolst"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:inputType="text"
            android:text="@string/course"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dayInput"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/section"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textSize="14sp"
            android:inputType="text"
            android:text="@string/section"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/professor"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textSize="14sp"
            android:inputType="text"
            android:text="@string/professor"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textSize="14sp"
            android:inputType="text"
            android:text="@string/location"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/room"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textSize="14sp"
            android:inputType="text"
            android:text="@string/room_number"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textSize="14sp"
            android:inputType="text"
            android:text="@string/time"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="15dp"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:ems="10"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/monday"
                    android:clickable="false"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="15dp"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:ems="10"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/tuesday"
                    android:clickable="false"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="15dp"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:ems="10"
                    android:text="@string/wednesday" />

                <CheckBox
                    android:id="@+id/wednesday"
                    android:clickable="false"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="15dp"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:ems="10"
                    android:text="@string/thursday" />

                <CheckBox
                    android:id="@+id/thursday"
                    android:clickable="false"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="15dp"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:ems="10"
                    android:text="@string/friday" />

                <CheckBox
                    android:id="@+id/friday"
                    android:clickable="false"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp" />
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>