<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/toolst"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:inputType="text"
            android:text="@string/assignment"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dayInput"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/course"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textSize="14sp"
            android:inputType="text"
            android:text="@string/course"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textSize="14sp"
            android:inputType="text"
            android:text="@string/day"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>