<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/toolst"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:inputType="text"
                android:ems="10"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameInputDialog"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/dayInput"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:inputType="text"
                android:ems="10"
                android:text="@string/course" />

            <EditText
                android:id="@+id/courseInputDialog"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:inputType="text"
                android:ems="10"
                android:text="@string/location" />

            <EditText
                android:id="@+id/locationInputDialog"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:ems="10"
                    android:text="@string/day" />

                <EditText
                    android:id="@+id/dayInput"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="number"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:ems="10"
                    android:text="@string/month" />

                <EditText
                    android:id="@+id/monthInput"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="number"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:ems="10"
                    android:text="@string/year" />

                <EditText
                    android:id="@+id/yearInput"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="number"
                    android:layout_marginStart="5dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:ems="10"
                    android:text="@string/hour" />

                <EditText
                    android:id="@+id/hourInput"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="number"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"  />
            </LinearLayout>

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:ems="10"
                    android:text="@string/minute" />

                <EditText
                    android:id="@+id/minuteInput"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="number"
                    android:layout_marginStart="5dp" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>